fix: words overfloww

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ button#start-btn {
 }
 
 #word-display {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   font-weight: 600;
   color: #333;
   margin-bottom: 1rem;
